v0.11.1/_sources/generated/statsmodels.tsa.statespace.sarimax.SARIMAX.rst.txt
statsmodels.tsa.statespace.sarimax.SARIMAX
==========================================

.. currentmodule:: statsmodels.tsa.statespace.sarimax

.. autoclass:: SARIMAX
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~SARIMAX.clone
      ~SARIMAX.filter
      ~SARIMAX.fit
      ~SARIMAX.fit_constrained
      ~SARIMAX.fix_params
      ~SARIMAX.from_formula
      ~SARIMAX.handle_params
      ~SARIMAX.hessian
      ~SARIMAX.impulse_responses
      ~SARIMAX.information
      ~SARIMAX.initialize
      ~SARIMAX.initialize_approximate_diffuse
      ~SARIMAX.initialize_default
      ~SARIMAX.initialize_known
      ~SARIMAX.initialize_statespace
      ~SARIMAX.initialize_stationary
      ~SARIMAX.loglike
      ~SARIMAX.loglikeobs
      ~SARIMAX.observed_information_matrix
      ~SARIMAX.opg_information_matrix
      ~SARIMAX.predict
      ~SARIMAX.prepare_data
      ~SARIMAX.score
      ~SARIMAX.score_obs
      ~SARIMAX.set_conserve_memory
      ~SARIMAX.set_filter_method
      ~SARIMAX.set_inversion_method
      ~SARIMAX.set_smoother_output
      ~SARIMAX.set_stability_method
      ~SARIMAX.simulate
      ~SARIMAX.simulation_smoother
      ~SARIMAX.smooth
      ~SARIMAX.transform_jacobian
      ~SARIMAX.transform_params
      ~SARIMAX.untransform_params
      ~SARIMAX.update
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~SARIMAX.endog_names
      ~SARIMAX.exog_names
      ~SARIMAX.initial_design
      ~SARIMAX.initial_selection
      ~SARIMAX.initial_state_intercept
      ~SARIMAX.initial_transition
      ~SARIMAX.initial_variance
      ~SARIMAX.initialization
      ~SARIMAX.loglikelihood_burn
      ~SARIMAX.model_latex_names
      ~SARIMAX.model_names
      ~SARIMAX.model_orders
      ~SARIMAX.param_names
      ~SARIMAX.param_terms
      ~SARIMAX.params_complete
      ~SARIMAX.start_params
      ~SARIMAX.state_names
      ~SARIMAX.tolerance
   
   
   